--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "lodash.isempty": "^4.4.0",
+    "mime": "^2.4.4",
     "mongoose": "^5.6.2",
     "morgan": "~1.9.1",
     "redux-devtools-extension": "^2.13.8",
