--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "npm install && npm run client-build && npm run server",
-    "server": "node app.js",
-    "client-build": "cd client && npm install && npm build",
-    "dev": "nodemon app.js"
+    "start": "node app.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
